@@ -18,7 +18,8 @@ What's New in Stackless 2.7.XX?
 - https://bitbucket.org/stackless-dev/stackless/issues/117
   Fix various reference leaks:
   - Leak of a reference to Py_None in generator.throw()
-  
+  - Leak of a reference to the thread-id of every thread returned by stackless.threads
+
   Additionally this change brings the handling of caught exceptions more in
   line with C-Python.
 
